# Water-Conservation-Using-Embedded-Systems

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
FreeRTOS/: CMakeLists.txt  FreeRTOSConfig.h
src/: CMakeLists.txt  lwipopts.h  main.c  pico_tasks.c  pico_tasks.h
src/drivers/tcp/: tcp_driver.c  tcp_driver.h
src/drivers/uart/: uart_driver.c  uart_driver.h
